[package]
name = "hitokoto_cli"
version = "0.1.0"
authors = ["Mido <instructr13@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
keywords = ["hitokoto", "cli"]
description = "A command line tool for generating your health information written in Rust"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "hitokoto"
path = "src/main.rs"

[dependencies]
hitokoto = { version = "0.1.0", path = "../core" }

anyhow = "1.0"
atty = "0.2"
clap = { version = "4.0", features = ["cargo", "derive"] }
copypasta = "0.8"
console = "0.15"
dialoguer = { version = "0.10", default-features = false }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = { version = "0.1.29", default-features = false }
