[package]
name = "hitokoto_gui"
version = "0.1.0"
description = "Generate your health information easily"
authors = ["Mido <instructr13@gmail.com>"]
categories = ["text-processing"]
keywords = ["hitokoto", "tauri"]
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
hitokoto = { version = "0.1.0", path = "../../core" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["clipboard-write-text", "global-shortcut-all", "shell-open"] }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = { version = "0.1.29", default-features = false }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
